<resources>
    <string name="app_name">Game of fifteen</string>
    <string name="start_button_name">Start Game</string>
    <string name="number_of_steps">Steps: 0</string>
    <string name="home_page">Home page</string>
    <string name="reload_button">Reload</string>
    <string name="game_size">Game size X×X:</string>
    <string name="default_size">4</string>
    <string name="upload_img">Upload IMG</string>
    <string name="privacy_policy">Privacy policy</string>
</resources>